Connect elastic with backend

--- a/notebooks/elk_beacons.ipynb
+++ b/notebooks/elk_beacons.ipynb
@@ -45,7 +45,7 @@
     "password = 'changeme'\n",
     "\n",
     "# Connect to Elasticsearch\n",
-    "es = Elasticsearch(['http://localhost:9200'], basic_auth=(username, password))\n",
+    "es = Elasticsearch([{'host': '34.67.212.1', 'port': 9200, 'scheme': 'http'}])\n",
     "\n",
     "query = {\n",
     "  \"size\": 10000,\n",
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "# Execute the query\n",
-    "result = es.search(index='.ds-winlogbeat-8.13.1-2024.04.08-000001', body=query)\n",
+    "result = es.search(index='.ds-winlogbeat-*', body=query)\n",
     "\n",
     "# Extract data from the result\n",
     "hits = result['hits']['hits']\n",
@@ -379,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -393,9 +393,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
